Añadiendo estilo h2 en el main

--- a/estilo.css
+++ b/estilo.css
@@ -17,6 +17,10 @@ color:white;
 font-family:'Fredoka One', cursive;
 background-color:purple;
 }
+h2
+{
+text-align:center;
+}
 p
 {
 font-weight:bold;	
